[package]
name = "ruvector-sparse-inference-wasm"
version = "2.2.3"
edition = "2021"
rust-version = "1.77"
license = "MIT"
description = "WebAssembly bindings for PowerInfer-style sparse inference"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
ruvector-sparse-inference = { path = "../ruvector-sparse-inference" }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Performance",
    "Window",
    "WorkerGlobalScope",
    "Response",
] }
getrandom = { version = "0.3", features = ["wasm_js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
