[workspace]
members = [
    "crates/exo-core",
    "crates/exo-hypergraph",
    "crates/exo-manifold",
    "crates/exo-temporal",
    "crates/exo-wasm",
    "crates/exo-federation",
    "crates/exo-node",
    "crates/exo-backend-classical",
    "crates/exo-exotic",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["EXO-AI Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/FlexNetOS/ruvector"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
dashmap = "6.1"

# Graph and topology
petgraph = "0.6"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

