[workspace]
resolver = "2"
members = [
    "crates/sevensense-core",
    "crates/sevensense-audio",
    "crates/sevensense-embedding",
    "crates/sevensense-vector",
    "crates/sevensense-learning",
    "crates/sevensense-analysis",
    "crates/sevensense-interpretation",
    "crates/sevensense-api",
    "crates/sevensense-benches",
    "tests",
    # Crate-membership audit: was orphaned (built by no workspace).
    "scripts",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/FlexNetOS/ruvector"
homepage = "https://github.com/FlexNetOS/ruvector/tree/main/examples/vibecast-7sense"
authors = ["7sense Team", "rUv"]
