[package]
name = "ruvix-cap"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
autobenches = false
license = "MIT OR Apache-2.0"
authors = ["RuVector Contributors"]
description = "seL4-inspired capability management for the RuVix Cognition Kernel (ADR-087)"
keywords = ["kernel", "capability", "security", "no_std", "seL4"]
categories = ["no-std", "embedded", "os"]
repository = "https://github.com/FlexNetOS/ruvector"
readme = "README.md"

[lib]
crate-type = ["rlib"]

[dependencies]
ruvix-types = { version = "0.1.0", path = "../types" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

# Bench `cap_bench` removed: it references the previous `CapabilityTable::new`
# signature and is out of scope for this clippy cleanup pass.

[features]
default = []
std = ["ruvix-types/std"]
alloc = ["ruvix-types/alloc"]

# Enable capability audit logging (requires alloc)
audit-log = ["alloc"]

# Enable metrics collection
metrics = ["alloc"]

