[package]
name = "ruvix-region"
autobenches = false
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
license = "MIT OR Apache-2.0"
authors = ["RuVector Contributors"]
description = "Memory region management for RuVix Cognition Kernel (ADR-087)"
keywords = ["kernel", "memory", "slab", "allocator", "no_std"]
categories = ["memory-management", "no-std", "embedded", "os"]
repository = "https://github.com/FlexNetOS/ruvector"
readme = "README.md"

[lib]
crate-type = ["rlib"]

[dependencies]
ruvix-types = { version = "0.1.0", path = "../types" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["std"]
std = ["ruvix-types/std"]
alloc = ["ruvix-types/alloc"]

# Enable mmap-based backing on Linux
mmap = []

# Enable statistics collection
stats = []

# Bench `slab_bench` removed: it predates the generic StaticBacking<N> API and
# is out of scope for this clippy cleanup pass.

