[package]
name = "sparse-persistent-homology"
version = "0.1.0"
edition = "2021"
authors = ["ExoAI Research Team"]
description = "Sub-cubic persistent homology with SIMD acceleration for real-time consciousness measurement"
license = "MIT"
repository = "https://github.com/FlexNetOS/ruvector"

# Enable workspace for standalone compilation
[dependencies]
# No external dependencies for core algorithms (pure Rust)

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[lib]
name = "sparse_persistent_homology"
path = "src/lib.rs"

[[bench]]
name = "sparse_homology_bench"
harness = false

