[package]
name = "meta-sim-consciousness"
version = "0.1.0"
edition = "2021"
authors = ["Ruvector Research Team"]
description = "Nobel-level breakthrough: O(N³) integrated information for ergodic systems"
license = "MIT"

# Allow standalone compilation
[dependencies]
rayon = "1.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "meta_sim_benchmarks"
harness = false

