[package]
name = "hyperbolic-attention"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["rUv Research <research@ruv.io>"]
repository = "https://github.com/FlexNetOS/ruvector"
homepage = "https://ruv.io/research"
documentation = "https://docs.rs/hyperbolic-attention"
description = "Hyperbolic attention networks with O(log n) hierarchical reasoning capacity"
keywords = ["hyperbolic", "attention", "geometry", "neural", "transformer"]
categories = ["science", "algorithms", "mathematics"]
readme = "README.md"

[lib]
name = "hyperbolic_attention"
path = "src/lib.rs"

[dependencies]
# Core dependencies would go here in production
# For research prototype, keeping minimal

[dev-dependencies]
approx = "0.5"
criterion = "0.5"

[[bench]]
name = "hyperbolic_ops"
harness = false
path = "benches/hyperbolic_ops.rs"
required-features = []

